add flexbox grid to desing.html

--- a/prototype.html
+++ b/prototype.html
@@ -109,9 +109,9 @@
       <div class="introduction-container flex-container align-center justify-center">
         <article class="introduction-text">
           <h1>Introduction</h1>
-          <p class="intro-para">Bird Nerd provides a dynamic learning experience for recognising New Zealand bird songs that aims to increase knowledge and awareness of bird conservation in New Zealand.</p>
+          <p class="intro-para">Bird Nerd provides a dynamic learning experience for recognising New Zealand bird songs that aim to increase knowledge and awareness of bird conservation in New Zealand.</p>
 
-          <p>In 2014 a friend who worked at the Ministry Of Primary industries approached me to help him come up with visual designs for an app idea he and his colleagues were pitching as part of the <a a target="_blank" href="http://www.aspiringleaders.org.nz">Aspiring Leadership Programme</a>, an annual event that brings together a diverse group of committed and courageous young leaders from across Aotearoa New Zealand.</p>
+          <p>In 2014 a friends who worked accross the natural resources sector approached me to help him come up with visual designs for an app idea he and his colleagues were pitching as part of the <a a target="_blank" href="http://www.aspiringleaders.org.nz">Aspiring Leadership Programme</a>, an annual event that brings together a diverse group of committed and courageous young leaders from across Aotearoa New Zealand.</p>
 
           <p>Our initial plan was to produce a series of simple wireframes that his team could present, we later felt that wireframes alone were not enough to communicate what his team wanted to build. We decided develop a <span>high fidelity prototype</span> based on a selected user story which included UI components and interactivity. </p>
         </article>
