add addtional portfolio items

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -115,14 +115,24 @@
         <div class="col-2"><img src="img/graphic-design/portfolio-nztb01.png" alt="graphic design annual report"></div>
         <div class="col-2"><img src="img/graphic-design/portfolio-nztb02.png" alt="graphic design annual report"></div>
         <div class="col-1"><img src="img/graphic-design/portfolio-nztb01.png" alt="graphic design annual report"></div>
-        <div class="caption">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad mollitia architecto, pariatur iste, tempora vero nemo. Eos asperiores consequatur, sed, est explicabo quidem recusandae sunt, minus saepe, non sapiente voluptatibus!</p>
-        </div>
+        <p class="caption" >Annaul Report / design and layout</p>
       </article>
+
       <article class="portfolio-wrap">
-        <div class="col-2"><img src="img/graphic-design/portfolio-nztb01.png" alt="graphic design annual report"></div>
-        <div class="col-2"><img src="img/graphic-design/portfolio-nztb02.png" alt="graphic design annual report"></div>
-        <div class="col-1"><img src="img/graphic-design/portfolio-nztb01.png" alt="graphic design annual report"></div>
+        <div class="col-1"><img src="img/graphic-design/portfolio-nix01.png" alt="Phoenix Brochure"></div>
+        <div class="col-1"><img src="img/graphic-design/portfolio-nix02.png" alt="Phoenix Brochure"></div>
+        <p class="caption">Wellington Phoenix pre-season campaign. I was involved with concepts photography, branding and billboads and many more.</p>
+      </article>
+
+      <article class="portfolio-wrap">
+        <div class="col-1"><img src="img/graphic-design/portfolio-promocard.png" alt="Phoenix Brochure"></div>
+        <p class="caption">Capturegram promoition card, design and photography</p>
+      </article>
+
+      <article class="portfolio-wrap">
+        <div class="col-2"><img src="img/graphic-design/portfolio-logo01.png" alt="branding/logo"></div>
+        <div class="col-2"><img src="img/graphic-design/portfolio-logo02.png" alt="branding/logo"></div>
+        <p class="caption">Capturegram promoition card, design and photography</p>
       </article>
     </div>
   </section> <!-- tandem intro -->
