--- a/prototype.html
+++ b/prototype.html
@@ -52,12 +52,12 @@
       <div class="menu-container flex-container is-column">
         <div class="nav-menu-content">
           <ul class="menu-list-items">
-            <li data-menuanchor="home" class="active"><a href="./#home">home</a></li>
-            <li data-menuanchor="about-me" class="menu-item"><a href="./#about-me">about</a></li>
+            <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
+            <li data-menuanchor="about-me" class="menu-item"><a href="#about-me">about</a></li>
             <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
             <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
-            <li data-menuanchor="photography" class="menu-item"><a href="#photography">design</a></li>
-            <li data-menuanchor="contact" class="menu-item"><a href="./#contact">contact</a></li>
+            <li data-menuanchor="photography" class="menu-item"><a href="graphic-design.html">design</a></li>
+            <li data-menuanchor="contact" class="menu-item"><a href="#contact">contact</a></li>
           </ul>
 
           <div class="social-main-nav">
