proof read and change copy prototype.html

--- a/prototype.html
+++ b/prototype.html
@@ -93,7 +93,7 @@
           <h1>Prototyping</h1>
           <h2>Personal project / Bird Nerd</h2>
           <p class="prototype-body-text">
-            Bird Nerd is an app that helps users record bird song or calls, automatically identify bird song or calls and upload sightings to a database. <!-- It provides a dynamic learning experience for recognising New Zealand bird songs that will help increase knowledge and awareness of bird conservation in New Zealand. -->
+            Bird Nerd is a mobile app that records and automatically identify bird songs or calls in the field. Users can also upload, tag and share bird sightings into a database.  
           </p>
         </article>  
         <div class="welcome-iphone">
@@ -109,11 +109,11 @@
       <div class="introduction-container flex-container align-center justify-center">
         <article class="introduction-text">
           <h1>Introduction</h1>
-          <p class="intro-para">Bird Nerd provides a dynamic learning experience for recognising New Zealand bird songs that aim to increase knowledge and awareness of bird conservation in New Zealand.</p>
+          <p class="intro-para">Bird Nerd provides a dynamic and fun learning experience that will help increase knowledge and awareness of bird conservation in New Zealand.</p>
 
-          <p>In 2014 a friends who worked accross the natural resources sector approached me to help him come up with visual designs for an app idea he and his colleagues were pitching as part of the <a a target="_blank" href="http://www.aspiringleaders.org.nz">Aspiring Leadership Programme</a>, an annual event that brings together a diverse group of committed and courageous young leaders from across Aotearoa New Zealand.</p>
+          <p>In 2014 friends working across the natural resources sector approached me to help come up with visual designs for an app concept they were pitching as part of the <a a target="_blank" href="http://www.aspiringleaders.org.nz">Aspiring Leadership Programme</a> (ALP), an annual event that brings together a diverse group of committed and courageous young leaders from across Aotearoa New Zealand.</p>
 
-          <p>Our initial plan was to produce a series of simple wireframes that his team could present, we later felt that wireframes alone were not enough to communicate what his team wanted to build. We decided develop a <span>high fidelity prototype</span> based on a selected user story which included UI components and interactivity. </p>
+          <p>Our initial plan was to produce a series of simple wireframes that the team could present, we later felt that wireframes alone were not enough to communicate what the team wanted to build and decided to develop a <span>high fidelity prototype</span> instead which included UI components and interactivity.</p>
         </article>
       </div>
     </section> <!-- .process -->
@@ -124,9 +124,9 @@
           <h1>Background</h1>
           <p class="intro-para">New Zealand has around 68 species of endemic birds, most of which have distinct songs and calls. However, recognising even a few birds from calls is difficult for most people.</p>
 
-          <p>Bird Nerd allows users to record bird songs and calls and identify which bird made the sound through ‘cloud’ based computations. Each time the app is used to identify a bird, data would be collected. This data will be publicly available through a website enabling individuals, communities, school groups, conservation groups, scientists and government agencies to help aid the conservation effort.</p>
+          <p>Using ‘cloud’ based computation, Bird Nerd allows users to record and identify bird songs and calls. Each time the app is used, data is collected and stored. This data will be publicly available through a website enabling individuals, communities, school groups, conservation groups, scientists and government agencies to help aid the conservation effort.</p>
 
-          <p>The primary objectives of Bird Nerd is to <span>enable New Zealanders to easily identify NZ bird song/calls,</span> foster greater connection with the natural environment through education and engagement and Use innovative technologies to facilitate connection to the outdoors.</p>
+          <p>The primary objectives of Bird Nerd are to <span>enable Kiwis to easily identify native New Zealand birds</span>, foster greater connection with the natural environment through education and engagement and Use innovative technologies to facilitate connection to the outdoors.</p>
 
         </article>
         <article class="client-sketches flex is-row space-between">
@@ -153,17 +153,17 @@
         <article class="wireframes-text">
           <h1>Wireframing</h1>
 
-          <p class="intro-para">For this case study I decided focus on developing one user story – registration and login. Add something about time restrictions</p>
+          <p class="intro-para">For this case study, I decided to focus on developing one user story — registration and login.</p>
 
-          <p>Wireframing was essential to making sure the prototype started in the right direction. Base on the content provided by MPI, I created sketches using pen and paper. This was fast and easy and gave me good idea of what functionality and content was required.</p>
+          <p>Wireframing was essential in making sure the prototype started in the right direction. Base on the content provided by the team from ALP, I brainstormed and created sketches using pen and paper. These sketches were done quickly and gave me a good idea of what functionality and content were required for the prototype.</p>
           <img src="img/wireframe-sketches.jpg" alt="fill this out">
-          <h5>(Wireframes produced with pen and paper, I spent approximately an hour on these simple sketches)</h5>
+          <h5>(Wireframes produced with pen and paper, I spent approximately an hour on these sketches)</h5>
         </article>
         
         <div class="sketch-wireframes flex is-column">
           <article>
-            <h2>Using Sketch App to produce higher fidelity</h2>
-            <p>I then converted the sketches into <span>digital wireframes using Sketch App.</span> Using Sketch UI kits, I was able to quickly produce vector based wireframe which I could then easily share and receive feedback. These also acted as a Lo-fi prototypes.</p>
+            <h2>Hi-fidelity wireframes with Sketch App</h2>
+            <p>I then converted the sketches into digital wireframes using Sketch App. Using Sketch UI kits, I was able to quickly produce vector based wireframes with familiar UI features like keypads and status bars which I could easily share and receive feedback.</p>
           </article>
           <article class="wireframe-sketches flex is-row space-between">
             <div>
@@ -188,13 +188,13 @@
     <section class="mockup flex is-column">
       <div class="mockup-container flex-container align-center space-between is-column">
         <article class="mockup-text">
-          <h1>Hi-fi- Mockups and design</h1>
-          <p>Using a combination of sketch app and photoshop, the wireframes were then transformed into high-fidelity mockups with color, typography and other visual elements. Utilising Sketch’s artboard feature, I rapidly <span>iterated and experimented </span> with different visual design variations.</p>
+          <h1>Hi-fidelity mockups and design</h1>
+          <p>Combining Sketch App and Photoshop, the wireframes were then transformed into hi-fidelity mockups which included color, typography, graphics and other visual elements. Utilising Sketch’s artboard feature, I rapidly <span>iterated and experimented </span> with different design variations and layouts.</p>
         </article>
         <div class="sketch-screenshot">
           <img src="img/skechapp-screen.png" alt="screenshot of design interation">
         </div>
-        <h5>(Early sketches and ideas provided by team at MPI)</h5> 
+        <h5>(Sketch App made interation quick and easy)</h5> 
       </div>
     </section> <!-- .mockup -->
 
@@ -202,7 +202,7 @@
       <div class="final-prototype-container flex-container is-column">
         <article>
           <h1>Introducing Bird Nerd</h1>
-          <p>The main landing page has been designed to allow users quick access to primary functions of the application. The interface design aims to be minimal and uncluttered without any unnecessary elements. I opted to not use any images or photography and instead went for a minimal approach using only one color, red which gives greater contrast against the green and earthy colors of the outdoors where the app would primarily be used.</p>
+          <p>The landing page has been designed to allow users quick access to primary functions of the application. The interface design aims to be <span>minimal and uncluttered without any unnecessary elements.</span> I opted to not use any images or photography and instead choose a minimal approach, using only one color (red) which contrasted against the green and earthy colors of the forest where the app would primarily be used.</p>
         </article>
         <article class="final-prototype-screens flex space-between">
           <div>
@@ -218,21 +218,23 @@
           <img src="img/signup-iphone.png" alt="fill this out">
           </div>
         </article>
+        <h5>(Mockups of landing, sign-in and registration pages)</h5> 
       </div>
+
       <div class="bird-nerd-welcome">
         <img src="img/welcome-bird.jpg" alt="">
       </div>
     </section> <!-- .final prototype -->
 
-    <section class="framer flex">
-      <div class="framer-container flex-container align-center space-between is-column-reverse">
-        <article class="framer-text col-two-thirds">
+    <section class="interactive-prototype flex">
+      <div class="interactive-prototype-container flex-container align-center space-between is-column-reverse">
+        <article class="interactive-prototype-text col-two-thirds">
           <h1>Experimenting with Interactive prototyping tools</h1>
           <h2>“Keeping up with trends in technology improves product design and how we prototype them”</h2>
-          <p>To better communicate the app’s interactions and transitions to stakeholders, I experimented with different prototyping tools such as Proto, Atomic and Framer.  I found Framer very powerful because framer uses javascript (Coffeescript) it was very powerful and I was able to produce very hi-fi prototypes.</p>
+          <p>To better communicate the app’s interactions, transitions, and userflows to potential stakeholders, I experimented with different prototyping tools such as <span>Auxure, Atomic, and Framer.</span> All had their pros and cons. I found Framer very powerful because it was based on javascript (Coffeescript) and you could have a lot of control but you needed to invest a little time in learning. Talk about Auxure and Atomic.</p>
           <a href="prototype.html"><button class="btn">test prototype</button></a>
         </article>
-        <aside class="framer-iphone">
+        <aside class="interactive-prototype-iphone">
           <img src="img/loading-iphone-large.png" alt="Framer mockup iphone">
         </aside>
       </div>    
