update tandem/user-interface.html copy

--- a/user-interface.html
+++ b/user-interface.html
@@ -91,7 +91,7 @@
         <h1>Tandem</h1>
         <h2>Group project, user interface and front end development</h2>
         <p class="ui-body-text">
-        Tadem is a ridesharing app connects drivers and passengers willing to travel together between cities and share the cost of the journey.
+        Tandem is a ridesharing app that allows drivers and passengers willing to travel together to connect and share the costs of the journey.
         </p>
       </article>  
       <div class="welcome-iphone">
@@ -105,9 +105,10 @@
         <article class="intro-text">
           <h1>Introduction</h1>
           <p class="intro-para">For our final week at Enspiral Dev Academy, each student was required to pitch an idea for final group projects, each team had six days to complete the project.</p>
-          <p>Our team consisted of 6 members and the chosen idea was Tandem. Tandem is a ridesharing app that connects drivers and passengers willing to travel together and share the costs of travel. Its aimed at drivers travelling long distances looking to fill empty seats and reducing the costs of travel.</p>
 
-          <p>Every team member was involved with product development and planning. <span>My Role was to design the user interface and front end development. Based on the produced wireframes I implemented the visual elements and layouts.</span></p>
+          <p>Our team consisted of 6 members and the chosen idea was Tandem — a ridesharing app that connects drivers and passengers willing to travel together and share the costs. Tandem was initially aimed at drivers traveling long distances looking to fill empty seats to reduce travel costs, but we later included adventurous travelers looking to save money.</p>
+
+          <p>As a team, we were all involved with product development and planning. <span>My additional role was to design and implement the user interface of the app as well as front end development.</span></p>
         </article>
       </div>
     </section> <!-- tandem intro -->
@@ -116,7 +117,7 @@
       <div class="tadem-technology-container flex-container justify-center is-column">
         <article>
           <h1>Technology</h1>
-          <p>Tandem used a lot of different technologies. We used <span>Express</span> to run a server and <span>Knex</span> to assist with our SQL calls to our <span>PostgreSQL</span> database. We used handlebars for html templating and <span>SASS, Jquery</span> for DOM manipulation and <span>nightwatch</span>, <span>selenium</span> for testing and <span>OAuth</span> for authorisation.</p>
+          <p>Tandem used many different technologies. We used <span>Express</span> to run a server and <span>Knex</span> to assist with our SQL calls to our <span>PostgreSQL</span> database. We used <span>handlebars</span> for html templating, <span>SASS</span> for css, <span>Jquery</span> for DOM manipulation and <span>nightwatch, selenium </span>and <span>OAuth</span> for unit testing and authorisation. We deployed the final app to <span>Heroku</span></p>
         </article>
       </div>
     </section>
@@ -125,15 +126,11 @@
       <div class="tadem-process-container flex-container justify-center is-column">
         <article>
           <h1>Our approach and process</h1>
-          <p>We started with planning, developed user stories and figured out what technologies were best. We then moved on to building wireframes for the site. Creating wireframes, user stories and sitemaps from the start was important because it made sure that we got the rugby balll rolling and that everyone in the team was on the same page. These wireframes and site maps were the base for my UI design 
+          <p>We started with planning, developed user stories and figured out what technologies were best. We then moved to building wireframes for the site. Creating wireframes, user stories, and sitemaps from the start were important because it ensured that every team member was on the same page which made delegating roles and tasks straightforward. 
           </p>
-          <p>
-          As we only had a week to complete the task, we skipped the prototype stage and moved straight into development.</p>
+          <p>We used InDesign to produce the wireframes and site maps which were bases for my UI design. Since we had less than a week to complete the app, we skipped the prototype stage and decided to move straight into development.</p>
         </article>
-<!--         <div class="tandem-sitemap">
-          <img src="img/tandem-wireframe-test.png" alt="Image of Tandem wireframe">
-        </div>
-        <br> -->
+
         <div class="tandem-sitemap">
           <img src="img/tandem-sitemap.png" alt="Image of Tandem wireframe">
         </div>
@@ -145,7 +142,8 @@
       <div class="final-design-container flex-container is-column">
         <article class="final-text">
           <h1>Welcome to Tandem</h1>
-          <p>After 6 days of intense development and design we had archieved our MVP and felt we had an app that we could proudly present. There were still many areas that needed improvement but during the experience  design we had archieved our MVP and felt we had an app that we could proudly present.  There were still many areas that needed improvement but during the experience.</p>
+          <p>At midnight on the final day, there was a 'code freeze', which meant no more coding or improvements to the app. After 6 days of intense development and design, we had achieved our MVP and felt we had an app that we could proudly present.</p>
+          <p>There were still many areas that still needed work such as adding additional features and refactoring code. I would have liked to have done more iterations and improvements on the UI design, the app was not yet fully responsive and the CSS needed cleaning up. Everyone in the team had an amazing experience.</p>
         </article>
         <article>
           <div class="tandem-screen-img">
