footer for mobile view

--- a/prototype.html
+++ b/prototype.html
@@ -22,13 +22,13 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-  <div class="spinner-wrapper">
+<!--   <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
   </div>
-
+ -->
   <div class="main-header">
 
     <div class="secondary-nav">
@@ -238,18 +238,25 @@
           <img src="img/loading-iphone-large.png" alt="Framer mockup iphone">
         </aside>
       </div>    
-    </section> <!-- .framer -->
+    </section> <!-- .interactive-prototyping -->
 
-    <footer class="footer flex align-center">
-      <div class="main-footer flex-container space-between">
-        <p class="copy-right">&copy; Copyright Rayfinn Digital 2016. Designed and created by Rath Prak
-</p>
+    <footer class="footer flex">
+      <div class="main-footer flex-container is-column">
+        <div class="details">
+          <p>Get in touch</p>
+          <p>Rath Prak</p>
+          <p>+64 (0)21 126 0568</p>
+          <p>digital designer | front end developer</p>
+          <p>Wellington, New Zealand</p>
+        </div>
         <div class="social-icons">
           <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
           <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
           <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
           <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://www.instagram.com/rp20nz"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         </div>
+        <p class="copy-right">&copy; Copyright 2016 Rayfinn Digital.</p>
       </div>
     </footer>
 
