finish footer desktop / add scroll to top main.js

--- a/prototype.html
+++ b/prototype.html
@@ -84,7 +84,7 @@
 
   <main class="prototype-main-wrapper">
 
-    <section class="prototype-intro-wrapper flex align-center justify-center">
+    <section class="prototype-intro-wrapper top-of-page flex align-center justify-center">
       <div class="prototype-watermark">
         <img src="img/prototype-text-logo.svg" alt="background watermark">
       </div>
@@ -240,9 +240,12 @@
       </div>    
     </section> <!-- .interactive-prototyping -->
 
-    <footer class="footer flex">
-      <div class="main-footer flex-container is-column">
+    <footer class="footer flex-container justify-center">
+      <div class="main-footer flex is-column">
         <div class="details">
+          <figure>
+          <a href="./#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
+          </figure>
           <p>Get in touch</p>
           <p>Rath Prak</p>
           <p>+64 (0)21 126 0568</p>
@@ -256,7 +259,10 @@
           <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
           <a target="_blank" class="contact-item" href="https://www.instagram.com/rp20nz"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         </div>
-        <p class="copy-right">&copy; Copyright 2016 Rayfinn Digital.</p>
+        <div>
+          <a class='backtop-btn'><i class="fa fa-long-arrow-up" aria-hidden="true"></i></a>
+          <p class="copy-right">&copy; Copyright 2016 Rayfinn Digital.</p>
+        </div>
       </div>
     </footer>
 
