--- a/graphic-design.html
+++ b/graphic-design.html
@@ -82,7 +82,7 @@
 
   <main class="design-main-wrapper align-center justify-center">
 
-  <section class="design-intro-wrapper flex align-center justify-center">
+  <section class="design-intro-wrapper top-of-page flex align-center justify-center">
     <div class="design-watermark">
       <img src="img/graphic-design.svg" alt="background watermark">
     </div>
@@ -138,17 +138,31 @@
   </section> <!-- tandem intro -->
 
 
-    <footer class="footer flex align-center">
-      <div class="main-footer flex-container space-between">
-        <p class="copy-right">&copy; Copyright Rayfinn Digital 2016. Designed and created by Rath Prak</p>
-        <div class="social-icons">
-          <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-          <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
-          <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-          <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-        </div>
+  <footer class="footer flex-container justify-center">
+    <div class="main-footer flex is-column">
+      <div class="details">
+        <figure>
+        <a href="./#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
+        </figure>
+        <p>Get in touch</p>
+        <p>Rath Prak</p>
+        <p>+64 (0)21 126 0568</p>
+        <p>digital designer | front end developer</p>
+        <p>Wellington, New Zealand</p>
       </div>
-    </footer>
+      <div class="social-icons">
+        <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+        <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        <a target="_blank" class="contact-item" href="https://www.instagram.com/rp20nz"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      </div>
+      <div>
+        <a class='backtop-btn'><i class="fa fa-long-arrow-up" aria-hidden="true"></i></a>
+        <p class="copy-right">&copy; Copyright 2016 Rayfinn Digital.</p>
+      </div>
+    </div>
+  </footer>
 
   </main> <!-- end of main-wrapper -->
 
