--- a/prototype.html
+++ b/prototype.html
@@ -56,7 +56,7 @@
             <li data-menuanchor="about-me" class="menu-item"><a href="#about-me">about</a></li>
             <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
             <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
-            <li data-menuanchor="photography" class="menu-item"><a href="graphic-design.html">design</a></li>
+            <li data-menuanchor="design" class="menu-item"><a href="graphic-design.html">design</a></li>
             <li data-menuanchor="contact" class="menu-item"><a href="#contact">contact</a></li>
           </ul>
 
