--- a/graphic-design.html
+++ b/graphic-design.html
@@ -64,16 +64,17 @@
             <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
             <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a target="_blank" class="contact-item" href="https://www.instagram.com/rp20nz"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="nav-about-text">
-          <h2>My name is Rath Prak, <br><span>I'm a Digital designer and front end developer </span> based in Wellington.</h2>
+          <h2>My name is Rath Prak, <br>I'm a <span>Digital designer</span> based in Wellington.</h2>
           <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p>
         </div>
 
         <div class="nav-back-button">
-          <p>menu</p>
+          <p>back</p>
         </div>
 
       </div> <!-- .menu-container -->
