--- a/prototype.html
+++ b/prototype.html
@@ -52,12 +52,12 @@
       <div class="menu-container flex-container is-column">
         <div class="nav-menu-content">
           <ul class="menu-list-items">
-            <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
-            <li data-menuanchor="about-me" class="menu-item"><a href="#about-me">about</a></li>
+            <li data-menuanchor="home" class="active"><a href="./#home">home</a></li>
+            <li data-menuanchor="about-me" class="menu-item"><a href="./#about-me">about</a></li>
             <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
             <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
             <li data-menuanchor="design" class="menu-item"><a href="graphic-design.html">design</a></li>
-            <li data-menuanchor="contact" class="menu-item"><a href="#contact">contact</a></li>
+            <li data-menuanchor="contact" class="menu-item"><a href="./#contact">contact</a></li>
           </ul>
 
           <div class="social-main-nav">
@@ -65,16 +65,17 @@
             <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
             <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a target="_blank" class="contact-item" href="https://www.instagram.com/rp20nz"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="nav-about-text">
-          <h2>My name is Rath Prak, <br><span>I'm a Digital designer and front end developer </span> based in Wellington.</h2>
+          <h2>My name is Rath Prak, <br>I'm a <span>Digital designer</span> based in Wellington.</h2>
           <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p>
         </div>
 
         <div class="nav-back-button">
-          <p>menu</p>
+          <p>back</p>
         </div>
 
       </div> <!-- .menu-container -->
@@ -143,7 +144,7 @@
             <img src="img/assets/bird-nerd-4.jpg" alt="Bird Nerd client sketches">
           </div>
         </article>
-          <h5>(Early sketches provided by team at MPI)</h5> 
+          <h5>(Early sketches provided by team from ALP)</h5> 
       </div>
     </section> <!-- .scope -->
 
@@ -179,7 +180,7 @@
              <img src="img/assets/wireframe/signup.png" alt="fill this out">
             </div>
           </article>
-          <h5>(Wireframes produced with Sketch App and UI kits)</h5> 
+          <h5>(Wireframes produced with Sketch App)</h5> 
         </div>
 
       </div> 
@@ -188,7 +189,7 @@
     <section class="mockup flex is-column">
       <div class="mockup-container flex-container align-center space-between is-column">
         <article class="mockup-text">
-          <h1>Hi-fidelity mockups and design</h1>
+          <h1>Hi-fidelity mockups</h1>
           <p>Combining Sketch App and Photoshop, the wireframes were then transformed into hi-fidelity mockups which included color, typography, graphics and other visual elements. Utilising Sketch’s artboard feature, I rapidly <span>iterated and experimented </span> with different design variations and layouts.</p>
         </article>
         <div class="sketch-screenshot">
@@ -244,7 +245,7 @@
       <div class="main-footer flex is-column">
         <div class="details">
           <figure>
-          <a href="./#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
+          <a href="./#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
           </figure>
           <p>Get in touch</p>
           <p>Rath Prak</p>
