--- a/user-interface.html
+++ b/user-interface.html
@@ -64,16 +64,17 @@
             <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
             <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a target="_blank" class="contact-item" href="https://www.instagram.com/rp20nz"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="nav-about-text">
-          <h2>My name is Rath Prak, <br><span>I'm a Digital designer and front end developer </span> based in Wellington.</h2>
+          <h2>My name is Rath Prak, <br>I'm a <span>Digital designer</span> based in Wellington.</h2>
           <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p>
         </div>
 
         <div class="nav-back-button">
-          <p>menu</p>
+          <p>back</p>
         </div>
 
       </div> <!-- .menu-container -->
@@ -117,7 +118,7 @@
       <div class="tadem-technology-container flex-container justify-center is-column">
         <article>
           <h1>Technology</h1>
-          <p>Tandem used many different technologies. We used <span>Express</span> to run a server and <span>Knex</span> to assist with our SQL calls to our <span>PostgreSQL</span> database. We used <span>handlebars</span> for html templating, <span>SASS</span> for css, <span>Jquery</span> for DOM manipulation and <span>nightwatch, selenium </span>and <span>OAuth</span> for unit testing and authorisation. We deployed the final app to <span>Heroku</span></p>
+          <p>Tandem used many different technologies. We used Express to run a server and Knex to assist with our SQL calls to our PostgreSQL database. We used handlebars for html templating, SASS for css, Jquery for DOM manipulation and nightwatch, selenium and OAuth for unit testing and authorisation. We deployed the final app to Heroku.</p>
         </article>
       </div>
     </section>
@@ -126,7 +127,7 @@
       <div class="tadem-process-container flex-container justify-center is-column">
         <article>
           <h1>Our approach and process</h1>
-          <p>We started with planning, developed user stories and figured out what technologies were best. We then moved to building wireframes for the site. Creating wireframes, user stories, and sitemaps from the start were important because it ensured that every team member was on the same page which made delegating roles and tasks straightforward. 
+          <p>We started with planning, developed user stories and figured out what technologies were best. We then moved to building wireframes for the site. <span>Creating wireframes, user stories, and sitemaps from the start were important</span> because it ensured that every team member was on the same page which made delegating roles and tasks straightforward. 
           </p>
           <p>We used InDesign to produce the wireframes and site maps which were bases for my UI design. Since we had less than a week to complete the app, we skipped the prototype stage and decided to move straight into development.</p>
         </article>
@@ -142,7 +143,7 @@
       <div class="final-design-container flex-container is-column">
         <article class="final-text">
           <h1>Welcome to Tandem</h1>
-          <p>At midnight on the final day, there was a 'code freeze', which meant no more coding or improvements to the app. After 6 days of intense development and design, we had achieved our MVP and felt we had an app that we could proudly present.</p>
+          <p>At midnight on the final day, there was a 'code freeze', which meant no more coding or improvements to the app. <span>After 6 days of intense development and design, we had achieved our MVP</span> and felt we had an app that we could proudly present.</p>
           <p>There were still many areas that still needed work such as adding additional features and refactoring code. I would have liked to have done more iterations and improvements on the UI design, the app was not yet fully responsive and the CSS needed cleaning up. Everyone in the team had an amazing experience.</p>
         </article>
         <article>
