change color menu / add animation to menu

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -51,7 +51,7 @@
       <div class="menu-container flex-container is-column">
         <div class="nav-menu-content">
           <ul class="menu-list-items">
-            <li data-menuanchor="home" class="active"><a href="./#home">home</a></li>
+            <li data-menuanchor="home" class="active menu-item"><a href="./#home">home</a></li>
             <li data-menuanchor="about-me" class="menu-item"><a href="./#about-me">about</a></li>
             <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
             <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
@@ -59,7 +59,7 @@
             <li data-menuanchor="contact" class="menu-item"><a href="./#contact">contact</a></li>
           </ul>
 
-          <div class="social-main-nav">
+          <div class="social-main-nav menu-item">
             <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
             <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
             <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
