--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="menu-container flex-container is-column">
       <div class="nav-menu-content">
         <ul class="menu-list-items">
-          <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
+          <li data-menuanchor="home" class="active menu-item"><a href="#home">home</a></li>
           <li data-menuanchor="about-me" class="menu-item"><a href="#about-me">about</a></li>
           <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
           <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
@@ -60,7 +60,7 @@
           <li data-menuanchor="contact" class="menu-item"><a href="#contact">contact</a></li>
         </ul>
 
-        <div class="social-main-nav">
+        <div class="social-main-nav menu-item">
           <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
           <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
           <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
@@ -69,7 +69,7 @@
         </div>
       </div>
 
-      <div class="nav-about-text">
+      <div class="nav-about-text menu-item">
         <h2>My name is Rath Prak, <br><span>I'm a Digital designer</span> based in Wellington.</h2>
         <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p>
       </div>
@@ -86,7 +86,6 @@
   </div>
   <div class="social-main">
     <ul>
-<!--       <li class="social-title"><span>digital designer</span> and <span>front end developer</span></li> -->
       <li><a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
       <li><a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a></li>
       <li><a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
