change close icon on slide down menu

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -74,7 +74,8 @@
         </div>
 
         <div class="nav-back-button">
-          <p>back</p>
+          <!-- <p>back</p> -->
+          <img src="img/close-icon.svg">
         </div>
 
       </div> <!-- .menu-container -->
