--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
   <div class="main-header">
 
     <figure class="logo red-logo active-logo">
-      <a href="#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
+      <a href="#home"><img src="img/rayfinn-logo-red.svg" alt="rayfinn logo"></a>
     </figure>
     <figure class="logo white-logo">
-      <a href="#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
+      <a href="#home"><img src="img/rayfinn-logo.svg" alt="rayfinn white logo"></a>
     </figure>
 
 
